# plan-learn-demo

./: README.md  blog.md  pyproject.toml  railway.toml
app/: main.py
app/alerts/: detectors.py  store.py  types.py
app/api/: alerts.py  chat.py  insights.py  memori_state.py  sample_data.py  tasks.py  usage.py
app/db/: init.py  session.py
app/infra/: openai_client.py
app/langgraph/: alerts_graph.py  nodes.py  state.py  workflow.py
app/memory/: memori.py
app/usage/: recorder.py
plan-learn-web/: README.md  package.json  pnpm-lock.yaml
plan-learn-web/app/: globals.css  layout.tsx  page.tsx
plan-learn-web/components/: alerts-panel.tsx  chat.tsx  clickable-steps.tsx  markdown-message.tsx  memori-visualizer.tsx  plan-kanban.tsx  providers.tsx  tasks.tsx  workflow-stepper.tsx
plan-learn-web/components/workflow-stepper/: phase-step.tsx  plan-step-item.tsx
plan-learn-web/lib/: api.ts  workflow-context.tsx  workflow-event-handler.ts
scripts/: reset_db.py
tests/: README.md  test_kanban.py  test_memory.py  test_memory_manual.md
